tests/sksl/errors/SwizzleOnlyLiterals.glsl
### Compilation failed:

error: 1: swizzle must refer to base expression
void func() { float x = 1.0; x = x.0; }
                                   ^
1 error
